@@ -21,8 +21,8 @@ dnl Boston, MA 02111-1307, USA.
 dnl
 dnl -----------------------------------------------------------------
 dnl File:          general.m4,v
-dnl Date modified: 2005/03/20 17:15:00
-dnl Version:       1.81
+dnl Date modified: 2005/07/01 14:31:04
+dnl Version:       1.82
 dnl -----------------------------------------------------------------
 dnl ************** <auto-copyright.pl END do not edit this line> **************
 
@@ -46,10 +46,10 @@ dnl     DPP_GEN_RECONFIG      - Generate a script called 'reconfig' that will
 dnl                             reconfigure a build directory from scratch.
 dnl ===========================================================================
 
-dnl general.m4,v 1.81 2005/03/20 17:15:00 patrickh Exp
+dnl general.m4,v 1.82 2005/07/01 14:31:04 patrickh Exp
 
 dnl Set the version of Doozer++.
-define(DPP_DPPVERSION, 2.0.1)
+define(DPP_DPPVERSION, 2.0.2)
 
 dnl ---------------------------------------------------------------------------
 dnl Change the dots in NUMBER into commas.
