@@ -1,5 +1,7 @@
 DATE       AUTHOR       CHANGE
 ---------- ------------ -------------------------------------------------------
+2005-07-01 patrickh     Fixed libjvm.so detection on Linux/amd64.
+
 [2.0.1 released - 6.18.2005]===================================================
 2005-03-20 patrickh     Introduced DPP_VERSION_CHECK_MSG_NO_CACHE.
                         NEW VERSION: 2.0.1
